fix: text alignment center on 404 page

--- a/assets/sass/newStyles/_404.scss
+++ b/assets/sass/newStyles/_404.scss
@@ -49,11 +49,23 @@
             width: 500px;
             font-size: 24px;
             line-height: 1.75;
+            margin: 0;
+            padding: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         @media (min-width: $small) and (min-width: $large) {
             width: 970px;
             font-size: 50px;
             line-height: normal;
+            margin: 0;
+            padding: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     }
 
